Add Directus key/secret (auto generated)

--- a/render.yaml
+++ b/render.yaml
@@ -27,6 +27,11 @@ services:
         fromDatabase:
           name: tolli
           property: password
+      - key: KEY
+        generateValue: true # will generate a base64-encoded 256-bit secret
+      - key: SECRET
+        generateValue: true # will generate a base64-encoded 256-bit secret
+
   # TeamHub frontent nuxt app
   - type: web
     plan: free
