--- a/render.yaml
+++ b/render.yaml
@@ -41,9 +41,8 @@ services:
     rootDir: nuxt-app
     buildCommand: yarn install
 #    startCommand: yarn run
-    # domains:
-    #   - teamhub.keppni.io
-    #   - test1.render.com
+     domains:
+       - teamhub.keppni.io
 
     autoDeploy: false # optional
 
