--- a/render.yaml
+++ b/render.yaml
@@ -9,6 +9,7 @@ services:
     region: frankfurt # optional (defaults to oregon)
     numInstances: 1 # optional (defaults to 1)
     envVars:
+      - fromGroup: team-hub
       - key: DB_CLIENT
         value: pg
       - key: DB_HOST
@@ -31,7 +32,6 @@ services:
         generateValue: true # will generate a base64-encoded 256-bit secret
       - key: SECRET
         generateValue: true # will generate a base64-encoded 256-bit secret
-      fromGroup: team-hub
 
   # TeamHub frontent nuxt app
   - type: web
