--- a/render.yaml
+++ b/render.yaml
@@ -31,7 +31,7 @@ services:
   - type: web
     plan: free
     name: teamhub-app
-    runtime: docker
+    runtime: node
     repo: https://github.com/Tolli81/team-hub.git
     rootDir: nuxt-app
     buildCommand: yarn init
